k8s/statefulset-postgres.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: petclinic-dev
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels: {app: postgres}
  template:
    metadata:
      labels: {app: postgres}
    spec:
      nodeSelector: {role: app}
      containers:
        - name: postgres
          image: postgres:16-alpine
          readinessProbe:
            exec: {command: ["pg_isready", "-U", "petclinic"]}
            periodSeconds: 5
          volumeMounts:
            - {name: pgdata, mountPath: /var/lib/postgresql/data}
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: petclinic-dev
spec:
  selector: {app: postgres}
  ports: [{port: 5432}]
  clusterIP: None
